--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 
 
 body{
-  width: 100vw;
+  width: 100%;
   height: 90vw;
   margin-top: 10px;
   background-color: lightblue;
   justify-content: center;
+  display: flex;
   
 }
 .container{
-  display: flex;
+ 
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -85,6 +86,14 @@ body{
   margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 0.5em;
+ }
+ .letras-incorretas{
+    display: inline-block;
+    color: black;
+    margin: 1.5px;
+ }
+ h2 {
+    font-size: 4vw;
  }
 .invisivel{
   display: none;
